# chronicle

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
chronicle/: __init__.py  api.py  boundary.py  cli.py  execution_graph.py  redaction.py  session.py  visualizer.py  wrap.py
chronicle/envelope/: __init__.py  capture.py  schema.py  store.py
chronicle/instrumentation/: __init__.py  langgraph.py  openinference.py
chronicle/judge/: __init__.py  rubric.py  runner.py
chronicle/replay/: __init__.py  assertions.py  injector.py  plan.py
docs/: demo.py  demo.tape  onboarding.md
examples/: README.md
examples/deletion_agent/: agent_bench.py  record_incident.py  run_cutpoint_demo.py  show_trace.py
examples/financial_incidents/: __init__.py  _helpers.py  invoice_currency.py  refund_order_id.py  run.py  trade_notional.py
examples/financial_incidents/demo-screenshots/: 01-scenario-setup.html  02-agent-bug.html  03-max-amount-gate.html  04-chronicle-test.html  05-record-terminal.html  06-test-terminal.html  README.md  build_slides.py  capture.py  trade-demo.html
examples/langgraph_demo/: agent.py
fixtures/envelopes/: incident-2026-06-17-001.json
fixtures/traces/deletion-incident-001/: 001-agent-1.json  002-delete_file-1.json  003-agent-2.json  graph.json
fixtures/traces/invoice-currency/: 001-agent-1.json  002-create_invoice-1.json  003-agent-2.json  graph.json
fixtures/traces/refund-order-id/: 001-agent-1.json  002-issue_refund-1.json  003-agent-2.json  graph.json
fixtures/traces/trade-notional/: 001-agent-1.json  002-place_order-1.json  003-agent-2.json  graph.json
scripts/: demo.bat  demo.sh  quickrun.bat  quickrun.sh  run.py  test.bat  test.sh
tests/: test_api.py  test_async_boundary.py  test_cli.py  test_cost_management_e2e.py  test_deletion_cutpoint.py  test_envelope_schema.py  test_execution_graph.py  test_financial_incidents.py  test_judge_layer2.py  test_metadata_capture.py  test_on_crossing.py  test_redaction.py  test_replay_layer1.py  test_transparency.py  test_visualizer.py  test_wrap.py  test_wrap_llm.py
