# Requires a recent build backend that understands SPDX license expressions
# (hatchling >= 1.27). If your tooling is older, replace the `license` line with
# license = { text = "MIT" } and add the MIT classifier below.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-chronicle"
version = "0.1.0"
description = "Record-and-replay for agent decision graphs: reproduce a prod agent failure as a committed regression test — and re-run your fix without live LLM calls."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Tisha Chawla" },
    { name = "Susheem Koul" },
]
keywords = [
    "llm",
    "agents",
    "observability",
    "record-replay",
    "testing",
    "regression",
    "opentelemetry",
    "openinference",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    # TODO: pin the real runtime dependencies, e.g.:
    # "openinference-instrumentation>=0.1",
    # "arize-phoenix-otel>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/theagentplane/chronicle"
Repository = "https://github.com/theagentplane/chronicle"
Issues = "https://github.com/theagentplane/chronicle/issues"
Changelog = "https://github.com/theagentplane/chronicle/blob/main/CHANGELOG.md"

# Keeps the CLI command `chronicle` even though the PyPI package is `agent-chronicle`.
[project.scripts]
chronicle = "chronicle.cli:main"

# The installable import package stays `chronicle/`.
[tool.hatch.build.targets.wheel]
packages = ["chronicle"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "layer1: deterministic structural replay (never calls the LLM)",
]
